# ace

./: Cargo.toml  README.md  release.toml
.cargo/: config.toml
crates/ace-can/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-can/src/: constants.rs  error.rs  lib.rs
crates/ace-can/src/ext/: classic.rs  fd.rs  mod.rs
crates/ace-can/src/isotp/: address.rs  mod.rs  pci.rs  reassembler.rs  segmenter.rs
crates/ace-can/tests/: roundtrip.rs
crates/ace-client/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-client/src/: client.rs  config.rs  error.rs  event.rs  lib.rs  pending.rs  sim_node.rs
crates/ace-core/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-core/src/: codec.rs  iter.rs  lib.rs
crates/ace-doip/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-doip/src/: error.rs  ext.rs  header.rs  lib.rs  message.rs
crates/ace-doip/src/payload/: alive_check.rs  diagnostic_message.rs  diagnostic_message_ack.rs  diagnostic_message_nack.rs  entity_status.rs  generic_nack.rs  mod.rs  power_information.rs  routing_activation.rs  vehicle_announcement_message.rs  vehicle_identification.rs
crates/ace-doip/src/session/: activation.rs  connection.rs  mod.rs
crates/ace-doip/tests/: roundtrip.rs
crates/ace-gateway/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-gateway/src/: config.rs  ecu_node.rs  gateway.rs  isotp_node.rs  lib.rs  router.rs  tester.rs
crates/ace-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-macros/src/: attrs.rs  lib.rs  read.rs  util.rs  write.rs
crates/ace-macros/tests/: Cargo.toml
crates/ace-macros/tests/compile_fail/: enum_id_id_pat.rs  enum_id_id_pat.stderr  enum_missing.rs  enum_missing.stderr  enum_missing_id.rs  enum_missing_id.stderr  struct_missing.rs  struct_missing.stderr  struct_read_all_length.rs  struct_read_all_length.stderr  struct_skip_length.rs  struct_skip_length.stderr  struct_skip_read_all.rs  struct_skip_read_all.stderr  struct_tuple_unsupported.rs  struct_tuple_unsupported.stderr  union_unsupported.rs  union_unsupported.stderr
crates/ace-macros/tests/compile_pass/: enum_id_pat.rs  enum_lt.rs  enum_newtype.rs  enum_no_lt.rs  enum_unit.rs  struct_basic.rs  struct_len_attr.rs  struct_lt.rs  struct_multi_len.rs  struct_no_lt.rs  struct_opt_trail.rs  struct_skip.rs
crates/ace-proto/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-proto/src/: any_address.rs  error.rs  lib.rs
crates/ace-proto/src/can/: address.rs  id.rs  mod.rs
crates/ace-proto/src/can/frame/: classic.rs  fd.rs  mod.rs
crates/ace-proto/src/common/: frame.rs  mod.rs
crates/ace-proto/src/doip/: address.rs  constants.rs  frame.rs  mod.rs
crates/ace-proto/src/uds/: frame.rs  mod.rs
crates/ace-server/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-server/src/: config.rs  handler.rs  lib.rs  nrc.rs  security_provider.rs  server.rs  sim_node.rs
crates/ace-sim/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-sim/src/: bus.rs  can_bus.rs  can_runner.rs  clock.rs  fault.rs  io.rs  lib.rs  node.rs  rng.rs  tcp_bus.rs  tcp_runner.rs
crates/ace-tests/: Cargo.toml
crates/ace-tests/src/: harness.rs  lib.rs
crates/ace-tests/src/dst/: data.rs  doip.rs  mod.rs  periodic.rs  security.rs  session.rs  transfer.rs
crates/ace-tests/src/fixtures/: client.rs  doip.rs  mod.rs  server.rs
crates/ace-transport/: Cargo.toml
crates/ace-transport/examples/: connect_to_vehicle.rs
crates/ace-transport/src/: doip_vehicle_driver.rs  lib.rs
crates/ace-uds/: CHANGELOG.md  Cargo.toml  README.md
crates/ace-uds/src/: constants.rs  error.rs  lib.rs
crates/ace-uds/src/ext/: mod.rs
crates/ace-uds/src/message/: mod.rs  payload.rs  service.rs
crates/ace-uds/src/message/services/: clear_diagnostic_information.rs  communication_control.rs  control_dtc_setting.rs  diagnostic_session_control.rs  dynamically_define_data_identifier.rs  ecu_reset.rs  input_output_control_by_identifier.rs  link_control.rs  mod.rs  negative_response.rs  read_data_by_identifier.rs  read_data_by_periodic_identifier.rs  read_dtc_information.rs  read_memory_by_address.rs  read_scaling_data_by_identifier.rs  request_download.rs  request_file_transfer.rs  request_transfer_exit.rs  request_upload.rs  response_on_event.rs  routine_control.rs  secured_data_transmission.rs  security_access.rs  tester_present.rs  transfer_data.rs  write_data_by_identifier.rs  write_memory_by_address.rs
crates/ace-uds/src/message/services/authentication/: request.rs  response.rs
crates/ace-uds/tests/: roundtrip.proptest-regressions  roundtrip.rs
