[package]
name = "ace-can"
version = "0.2.0"
edition = "2024"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
description = "ISO-TP implementation. Provides the reassembler and segmenter used by an IsoTpNode to bridge DoIP UDS payloads to CAN frames."
readme = "README.md"
repository = "https://github.com/samp-reston/ace"
license = "MIT or Apache-2.0"
keywords = ["diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming", "automotive"]

[features]
default = []
alloc = ["ace-core/alloc", "ace-proto/alloc"]
std = ["alloc", "ace-core/std", "ace-proto/std"]

[dependencies]
ace-core = { workspace = true }
ace-proto = { workspace = true }
heapless = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
