[package]
name = "ace-core"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
description = "Foundation layer, providing three codec traits that the rest of ACE builds on: FrameRead, FrameWrite, Writer"
readme = "README.md"
repository = "https://github.com/samp-reston/ace"
license = "MIT or Apache-2.0"
keywords = ["diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming", "automotive"]

[features]
default = []
alloc = ["bytes"]
std = ["alloc", "heapless/defmt"]

[dependencies]
heapless = { workspace = true }
bytes = { workspace = true, optional = true }
