[package]
name = "ace-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
alloc = []

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }


[dev-dependencies]
trybuild = { workspace = true }
ace-core = { path = "../ace-core", features = ["alloc"] }
heapless = { workspace = true }
bytes = { workspace = true }
