[package]
name = "ace-macros"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
description = "Proc-macro crate. Provides FrameCodec which generates FrameRead and FrameWrite impls for structs and enums."
readme = "README.md"
repository = "https://github.com/samp-reston/ace"
license = "MIT or Apache-2.0"
keywords = ["diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming", "automotive"]

[lib]
proc-macro = true

[features]
alloc = []

[dependencies]
darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }


[dev-dependencies]
trybuild = { workspace = true }
ace-core = { path = "../ace-core", features = ["alloc"] }
heapless = { workspace = true }
bytes = { workspace = true }
