[package]
name = "ace-sim"
version = "0.2.1"
edition = "2024"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
description = "Deterministic simulation infrastructure. Everything needed to test protocol state machines reproducibly."
readme = "README.md"
repository = "https://github.com/samp-reston/ace"
license = "MIT or Apache-2.0"
keywords = ["diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming", "automotive"]

[features]
default = []
std = ["ace-core/std"]

[dependencies]
ace-core = { workspace = true }
heapless = { workspace = true }
