[package]
name = "ace-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ace-sim = { version = "0.1.0", default-features = false }
ace-server = { version = "0.1.0", default-features = false }
ace-client = { version = "0.1.0", default-features = false }
ace-proto = { version = "0.1.0", default-features = false }
ace-uds = { version = "0.1.0", default-features = false }
ace-doip = { version = "0.1.0", default-features = false }
ace-can = { version = "0.1.0", default-features = false }
ace-gateway = { version = "0.1.0", default-features = false }
heapless = { workspace = true }
