[package]
name = "ace-uds"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
description = "UDS typed message layer implementing ISO 14229-1."
readme = "README.md"
repository = "https://github.com/samp-reston/ace"
license = "MIT or Apache-2.0"
keywords = ["diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming", "automotive"]

[features]
default = []
alloc = ["ace-core/alloc", "ace-proto/alloc"]
std = ["alloc", "ace-core/std", "ace-proto/std"]

[dependencies]
ace-macros = { version = "0.1.0", default-features = false }
ace-core = { version = "0.1.0", default-features = false }
ace-proto = { version = "0.1.0", default-features = false }
heapless = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
