[package]
name = "ace-uds"
version = "0.1.0"
edition = "2024"
authors = ["Samuel Preston <samp.reston@outlook.com>"]
description = ""
readme = "README.md"
repository = "https://github.com/samp-reston/ace"
license = "MIT or Apache-2.0"
keywords = ["diagnostics", "vehicle", "standards"]
categories = ["development-tools", "network-programming", "automotive"]

[features]
default = []
alloc = ["ace-core/alloc", "ace-proto/alloc"]
std = ["alloc", "ace-core/std", "ace-proto/std"]

[dependencies]
ace-macros = { path = "../ace-macros", default-features = false }
ace-core = { path = "../ace-core", default-features = false }
ace-proto = { path = "../ace-proto", default-features = false }
heapless = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
